Added profile pic to hero section

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,12 @@
             <a href="/contact" class="btn outline">Contact Me</a>
         </div>
     </div>
+       <!-- RIGHT: IMAGE -->
+    <div class="hero-image">
+      <img src="{{ url_for('static', filename='images/profile.jpg') }}"
+           alt="Anam Shaikh"
+           class="profile-img">
+    </div>
 
     <div class="hero-right">
         <div class="blob"></div>
