--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,7 +6,7 @@
 </head>
 <nav class="navbar">
     <div class="logo">
-    <img src="{{ url_for('static', filename='images/profile.jpg') }}" alt="Anam profile">
+    <img src="{{ url_for('static', filename='images/AS_logo.png') }}" alt="Anam profile">
 </div>
 
 
@@ -15,6 +15,8 @@
         <a href="/about">About</a>
         <a href="/projects">Projects</a>
         <a href="/contact">Contact</a>
+        
+        
     </div>
 </nav>
 <body>
@@ -25,9 +27,10 @@
 </section>
 
 <section class="content-card">
-    <p><strong>Email:</strong> shkanam34@gmail.com</p>
-    <p><strong>LinkedIn:</strong> Anam Shaikh</p>
+    <p><strong>Email: <a href="shkanam34@gmail.com/"> shkanam34@gmail.com</a> </strong></p>
+    <p><strong>LinkedIn: <a href="https://www.linkedin.com/in/anam-s-3b5166184/">Anam Shaikh</a></strong></p>
     <p><strong>Location:</strong> Bangalore, India</p>
+    <p><strong>Phone:</strong> +91-8482854812</p>
 </section>
 
 <a class="back-link" href="/">← Back to Home</a>
