--- a/templates/projects.html
+++ b/templates/projects.html
@@ -6,7 +6,7 @@
 </head>
 <nav class="navbar">
     <div class="logo">
-    <img src="{{ url_for('static', filename='images/profile.jpg') }}" alt="Anam profile">
+    <img src="{{ url_for('static', filename='images/AS_logo.png') }}" alt="Anam profile">
 </div>
 
 
